# journald-to-cloudwatch

./: .dockerignore  .gitignore  Cargo.toml  README.md
release/: journald-to-cloudwatch.service
src/: cloudwatch.rs  configuration.rs  ec2.rs  main.rs
tools/: Dockerfile  in_container_run.sh  package.py
