[package]
name = "journald-to-cloudwatch"
version = "1.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "Service that copies logs from journald to AWS CloudWatch Logs."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicholasbishop/journald-to-cloudwatch"

[dependencies]
chrono = "^0.4"
reqwest = "^0.9"
rusoto_core = "^0.40"
rusoto_ec2 = "^0.40"
rusoto_logs = "^0.40"
systemd = "^0.4"
